--- a/css/pfpca-footer.css
+++ b/css/pfpca-footer.css
@@ -1,3 +1,13 @@
 .block-pfpca-footer-friends-and-sponsors img{
   max-height:100px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: -webkit-filter .4s;
+  transition: filter .4s;
+}
+
+.block-pfpca-footer-friends-and-sponsors img:hover,
+.block-pfpca-footer-friends-and-sponsors img:focus{
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
 }
